src/components/styles/Header.css
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: black;
  padding: 10px 20px;
  color: white;
  flex-wrap: wrap;
}

.left, .middle, .right {
  display: flex;
  align-items: center;
}

.logo {
  height: 40px;
  margin-right: 5px;
}

.company-name {
  font-family: 'Poppins'; /* Clean, modern font */
  font-size: 1.5rem; /* Large and bold */
  font-weight: 500; /* Make it stand out */
  color: #ffffff; /* White text for contrast */
  letter-spacing: 1px; /* Stylish spacing */
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
  margin: 0;
  text-decoration: none;
}

.highlight {
  color: #ffffff;
  font-size: 1.1em; 
  font-family: 'Mystery Quest';
}

.middle {
  flex-grow: 1;
  justify-content: center;
}


.middle a {
  margin: 0 15px;
  color: white;
  background-color: transparent;
  text-decoration: none;
  font-size: 0.8rem;
}


.right .button {
  margin-left: 15px;
  color: white;
  text-decoration: none;
  padding: 5px 10px;
  border-radius: 5px;
  text-align: center;
  white-space: nowrap; /* Ensure the button text does not wrap */
  font-size: 0.8rem;
  background-color: #13264D;
  border: 1px solid #13264D;
}

.right .button:hover {
  background-color: #043668;
  border: 1px solid #043668;
}

.menu-icon {
  display: none;
  font-size: 1.5em;
  cursor: pointer;
}

/* Responsive Design */
@media (max-width: 768px) {
  .menu-icon {
    display: block;
  }

  .middle, .right {
    display: none;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
  }

  .middle.open, .right.open {
    display: flex;
  }

  .middle {
    margin-left: 30px; /* Add margin to start below the title */
  }

  .middle a {
    margin: 10px 0;
    text-align: left;
    width: 100%;
    background-color: transparent;
  }

  .middle a:focus, .middle a:active { outline: none !important; box-shadow: none !important; background-color: transparent !important; color: inherit !important; border: none !important; text-decoration: none !important; -webkit-tap-highlight-color: transparent !important; /* For mobile browsers */ }

  .right .button {
    margin: 10px 0;
    text-align: center;
    width: 100%;
    font-size: 0.8rem;
  }

  .right {
    align-items: center; /* Center the buttons */
  }
}

